--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T0.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T0.cfg
@@ -39,7 +39,7 @@ microsteps: 16
 ##	New value = old value x (actual extrusion length / target length)
 ##  	22.6789511 is a value that we recommend
 gear_ratio: 50:10
-rotation_distance: 21.6261675
+rotation_distance: 20.544859125
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: EBBCan0: PB13
@@ -126,8 +126,17 @@ activate_gcode:
 [gcode_macro T0]
 variable_color: ""
 variable_material: 0
+variable_print_temp: 0
 gcode:
     SELECT_TOOL T=0
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        M400
+        START_TOOL_PROBE_CRASH_DETECTION T=0      # Start crash detection
+        {% if material|int == 2 %}
+            RESPOND TYPE=echo MSG='Clean PETG Nozzle...'
+            _CLEAN_MID_PRINT
+        {% endif %}
+    {% endif %}
     
 #####################################################################
 #                        Toolhead parameters
