--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T2.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T2.cfg
@@ -133,8 +133,17 @@ activate_gcode:
 [gcode_macro T2]
 variable_color: ""
 variable_material: 0
+variable_print_temp: 0
 gcode:
     SELECT_TOOL T=2
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        M400
+        START_TOOL_PROBE_CRASH_DETECTION T=2      # Start crash detection
+        {% if material|int == 2 %}
+            RESPOND TYPE=echo MSG='Clean PETG Nozzle...'
+            _CLEAN_MID_PRINT
+        {% endif %}
+    {% endif %}
 
 #####################################################################
 #                        Toolhead parameters
