--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-general.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-general.cfg
@@ -1,19 +1,15 @@
 ####################################################################################
 #	                         Operation Macros
 ####################################################################################
+
 #--------------------------------------------------------------------
-[gcode_macro A_DAYBREAK]
+[gcode_macro A_FORCE_UP]
 gcode:
-    {% if printer['output_pin daylight'].value == 0.0 %}
-        RESPOND TYPE=echo MSG='{"Light on..."}'
-        SET_PIN PIN=daylight VALUE=0.50
-    {% else %}
-        RESPOND TYPE=echo MSG='{"Light off..."}'
-        SET_PIN PIN=daylight VALUE=0.00
-    {% endif %}
-    
+    SET_KINEMATIC_POSITION Z=0
+    G1 Z10 F3000
+    M84
 #--------------------------------------------------------------------
-[gcode_macro A_PRESENT_TH]
+[gcode_macro A_PRESENT]
 gcode:
     {% set center_x = printer["gcode_macro _home"].xh|float %}
     {% set center_y = printer["gcode_macro _home"].yh|float %}
@@ -30,13 +26,14 @@ gcode:
 gcode:
     {% if printer['gcode_macro _global_variable'].heatsoak_temp > 0.0 %}
         {% set temp = printer['gcode_macro _global_variable'].heatsoak_temp|float %}
-        RESPOND TYPE=echo MSG='Chamber Heat Soaking...'
+        RESPOND TYPE=echo MSG='Chamber Heat Soaking to {temp}C...'
         SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
-        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1
-        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.80
+        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1.00
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=1.00
         TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={temp}
         M400
-        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.30
+        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=0.50
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.75
         RESPOND TYPE=echo MSG='Chamber is {temp}C...'
     {% endif %}
 
@@ -94,10 +91,23 @@ gcode:
 gcode:
     {% if printer['fan_generic fan_nevermore_stealthmax'].speed == 0.0 %}
         RESPOND TYPE=echo MSG='{"Fan on..."}'
-        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1.00
         SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.75
+        {% if printer['heater_bed'].target > 80 %}
+            SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1.00
+        {% endif %}
     {% else %}
         RESPOND TYPE=echo MSG='{"Fan off..."}'
         SET_FAN_SPEED FAN=fan_chamber_heater SPEED=0.00
         SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.00
+    {% endif %}
+
+#--------------------------------------------------------------------
+[gcode_macro A_DAYBREAK]
+gcode:
+    {% if printer['output_pin daylight'].value == 0.0 %}
+        RESPOND TYPE=echo MSG='{"Light on..."}'
+        SET_PIN PIN=daylight VALUE=0.50
+    {% else %}
+        RESPOND TYPE=echo MSG='{"Light off..."}'
+        SET_PIN PIN=daylight VALUE=0.00
     {% endif %}
