--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-print.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-print.cfg
@@ -64,6 +64,7 @@ gcode:
         {% endfor %}
     {% else %}
         {% if "T0_TEMP" in params %}
+            SET_GCODE_VARIABLE  MACRO=T0  VARIABLE=print_temp  VALUE={params.T0_TEMP}
             {% if params.T0_FIL|string == "PLA" %}
             SET_GCODE_VARIABLE  MACRO=T0  VARIABLE=material  VALUE=1
             RESPOND TYPE=echo MSG='T0 material: PLA'
@@ -78,6 +79,7 @@ gcode:
             {% endif %}
         {% endif %}
         {% if "T1_TEMP" in params %}
+            SET_GCODE_VARIABLE  MACRO=T1  VARIABLE=print_temp  VALUE={params.T1_TEMP}
             {% if params.T1_FIL|string == "PLA" %}
             SET_GCODE_VARIABLE  MACRO=T1  VARIABLE=material  VALUE=1
             RESPOND TYPE=echo MSG='T1 material: PLA'
@@ -92,6 +94,7 @@ gcode:
             {% endif %}
         {% endif %}
         {% if "T2_TEMP" in params %}
+            SET_GCODE_VARIABLE  MACRO=T2 VARIABLE=print_temp  VALUE={params.T2_TEMP}
             {% if params.T2_FIL|string == "PLA" %}
             SET_GCODE_VARIABLE  MACRO=T2  VARIABLE=material  VALUE=1
             RESPOND TYPE=echo MSG='T2 material: PLA'
@@ -106,6 +109,7 @@ gcode:
             {% endif %}
         {% endif %}
         {% if "T3_TEMP" in params %}
+            SET_GCODE_VARIABLE  MACRO=T3  VARIABLE=print_temp  VALUE={params.T3_TEMP}
             {% if params.T3_FIL|string == "PLA" %}
             SET_GCODE_VARIABLE  MACRO=T3  VARIABLE=material  VALUE=1
             RESPOND TYPE=echo MSG='T3 material: PLA'
@@ -176,24 +180,28 @@ gcode:
 #---------------------------------------------------------------------
 [gcode_macro PRINT_END]                                     # Set PRINT_END as the end-of-print macro to customise the after-print action.
 gcode:
+    ## Clear print variables 1 ----------------------------------------
+    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=wipe_x   VALUE=0.0
+    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=wipe_y   VALUE=0.0
+    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=printing VALUE=0
+    ## Clear cache ----------------------------------------------------
     M400                                                    # finish off and clear buffer
     RESPOND TYPE=echo MSG='PRINT_END...'
     ## ----------------------------------------------------------------
     G91                                                     # relative position
     G0 Z1.00 F9000                                          # Remove nozzle
     G90
-    SELECT_TOOL T=0
-    ## Clear print variables ------------------------------------------
+    _CLEAN_MID_PRINT
+    T0
+    ## Clear print variables 2 ----------------------------------------
     SET_GCODE_OFFSET Z=0.000 MOVE=1
     TURN_OFF_HEATERS                                        # Close the hot end
     M107                                                    # Switch off the fan
     BED_MESH_CLEAR                                          # Unloading net beds
     SET_SKEW CLEAR=1                                        # Clear skew compensation
-    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=wipe_x   VALUE=0.0
-    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=wipe_y   VALUE=0.0
-    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=printing VALUE=0
     {% for tool_nr in printer.toolchanger.tool_numbers %}
-        SET_GCODE_VARIABLE  MACRO=T{tool_nr}  VARIABLE=material  VALUE=0
+        SET_GCODE_VARIABLE  MACRO=T{tool_nr}  VARIABLE=material    VALUE=0
+        SET_GCODE_VARIABLE  MACRO=T{tool_nr}  VARIABLE=print_temp  VALUE=0
     {% endfor %}
     ## ----------------------------------------------------------------
     {% if printer.toolhead.position[2]|float < printer['toolchanger'].params_max_z|float %}
@@ -209,12 +217,11 @@ gcode:
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
-    # Parameters
     {% set z = params.Z|default(10)|int %}                                                   ; zhop amount
-
     {% if printer['pause_resume'].is_paused|int == 0 %}
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE={z}                              ; set z hop variable for reference in resume macro
-        SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer[printer['toolhead'].extruder].target}    ; set hotend temp variable for reference in resume macro
+        ## set hotend temp variable for reference in resume macro
+        SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer[printer['toolhead'].extruder].target}
         SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
         BASE_PAUSE                                                                           ; pause print
         {% if (printer.gcode_move.position.z + z) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
@@ -227,7 +234,9 @@ gcode:
         G90                                                                                  ; absolute positioning
         G1 X{printer.toolhead.axis_maximum.x-20} Y{printer.toolhead.axis_maximum.y-20} F10000
         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
-        M104 S0                                                                              ; turn off hotend
+        {% for tool_nr in printer.toolchanger.tool_numbers %}
+            M104 T{tool_nr} S0
+        {% endfor %}
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
 
@@ -239,9 +248,10 @@ variable_etemp: 0
 gcode:
     # Parameters
     {% set e = params.E|default(2.5)|int %}                                          ; hotend prime amount (in mm)
-
     {% if printer['pause_resume'].is_paused|int == 1 %}
         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
+        INITIALIZE_TOOLCHANGER
+        START_TOOL_PROBE_CRASH_DETECTION
         {% if etemp > 0 %}
             M109 S{etemp|int}                                                        ; wait for hotend to heat back up
         {% endif %}
