--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger.cfg
@@ -4,9 +4,9 @@ t_command_restore_axis: Z    # The axis to restore, by default
 params_safe_y: 120           # The closest toward the front that the toolhead can go without coliding with the docked toolhead(s)
 params_close_y: 50           # The closest toward the front that the toolhead-carrier can go without coliding with the docked toolhead(s)
 params_min_z: 40             # The lowest z position that tool-changing can happen
-params_max_z: 240            # The highest z position that tool-changing can happen
+params_max_z: 250            # The highest z position that tool-changing can happen
 params_fast_speed: 30000     # (1500 = 40mm/s) The speed to travel to the first point in the tool-change path
-params_path_speed: 7000      # (1500 = 40mm/s) The max speed to travel during the tool-change path
+params_path_speed:  8000     # (1500 = 40mm/s) The max speed to travel during the tool-change path
 
 params_type = 'sb_misschanger'
 ## 'x'/'y' is the relative position, to the the starting position of the tool path for the toolhead
@@ -51,32 +51,32 @@ before_change_gcode:
     {% endif %}
 
 after_change_gcode: 
+    {% set fast = tool.params_fast_speed|float %}
     {% set tn = "T"+(tool.tool_number|string) %}
     {% if printer["gcode_macro " + tn ] %}
         SET_GCODE_VARIABLE MACRO={tn} VARIABLE=color VALUE="'c44'"
     {% endif %}
-
-    ## load Input Shaper frequency, type and damping ratio 
-    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params)
-    {% if tool.params_input_shaper_freq_x and tool.params_input_shaper_freq_y %}
-      {% if tool.params_input_shaper_type_x and tool.params_input_shaper_type_y %}
-        {% if tool.params_input_shaper_damping_ratio_x and tool.params_input_shaper_damping_ratio_y %}
-          SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={tool.params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={tool.params_input_shaper_damping_ratio_y}
+        
+    ## Load input shaper if the printer is doing a print (if none or some params_input_shaper_* are set in tool, use default input_shaper_params).
+    ## Otherwise, don't load input shaper and disable crash detection.
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        {% if tool.params_input_shaper_freq_x and tool.params_input_shaper_freq_y %}
+          {% if tool.params_input_shaper_type_x and tool.params_input_shaper_type_y %}
+            {% if tool.params_input_shaper_damping_ratio_x and tool.params_input_shaper_damping_ratio_y %}
+              SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={tool.params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={tool.params_input_shaper_damping_ratio_y}
+            {% else %}
+              SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+            {% endif %}
+          {% else %}
+            SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+          {% endif %}
         {% else %}
-          SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+          SET_INPUT_SHAPER SHAPER_FREQ_X={params_input_shaper_freq_x} SHAPER_FREQ_Y={params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
         {% endif %}
-      {% else %}
-        SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
-      {% endif %}
-    {% else %}
-      SET_INPUT_SHAPER SHAPER_FREQ_X={params_input_shaper_freq_x} SHAPER_FREQ_Y={params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
-    {% endif %}
-
-    {% if printer["gcode_macro _global_variable"].printing|int == 0 %}
-        STOP_TOOL_PROBE_CRASH_DETECTION
     {% endif %}
 
 dropoff_gcode:
+    ## Variables
     {% set x = tool.params_park_x|float %}
     {% set y = tool.params_park_y|float %}
     {% set z = tool.params_park_z|float %}
@@ -85,29 +85,29 @@ dropoff_gcode:
     {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
     {% set cur_z = printer.toolhead.position[2]|float %}
     
-    ##############  Move to the dock  #########################
+    ## Move to the dock
     G90
     {% if cur_z < tool.params_min_z %}
-        G0 X{ x } Y{ tool.params_safe_y } Z{ tool.params_min_z+1.0 } F{fast}
+        G0 X{ x } Y{ tool.params_safe_y } Z{ tool.params_min_z } F{fast}
     {% else %}
         G0 X{ x } Y{ tool.params_safe_y } Z{ [cur_z+1.0, max_z]|min } F{fast}
     {% endif %}
     G0 Y{ y + path[0]['y']|float } F{fast}    # Move to the first point in the path, in the y axis
-    G4 P250                                   # Pause and wait for physical stability
+    M400                                      # Clear cache
+    G4 P400                                   # Pause and wait for physical stability
     M400                                      # Clear cache
     STOP_TOOL_PROBE_CRASH_DETECTION           # Stop crash detection
     M400                                      # Clear cache
     
-    ############## Run the path ###############################
+    ## Run the path
     {% for pos in path %}
         {% if pos['d']|int == 1 %}
             G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
         {% endif %}
     {% endfor %}
-    M400
-    RESPOND TYPE=echo MSG='Dropped off {tool.name}...'
 
 pickup_gcode:
+    ## Variables
     {% set x = tool.params_park_x|float %}
     {% set y = tool.params_park_y|float %}
     {% set z = tool.params_park_z|float %}
@@ -116,25 +116,30 @@ pickup_gcode:
     {% set wx = printer["gcode_macro _global_variable"].wipe_x|float %}
     {% set wy = printer["gcode_macro _global_variable"].wipe_y|float %}
     
-    ##############  Fast to the last point  ################
+    ## Fast to the last point
     G90
     G0 Y{tool.params_close_y} F{fast}
     G0 X{x + path[-1]['x']|float} F{fast}
     G0 Y{y + path[-1]['y']|float} F{fast}
+    
     ## Wait for temp before actually picking up the tool, while the nozzle is resting on it's pad.
     {% if tool.extruder %}
-        M109 T{tool.tool_number} S{printer[tool.extruder].target|int}
+        {% set macroparameter = "gcode_macro T" ~ tool.tool_number|string %}
+        {% if printer[macroparameter].print_temp > 0 and printer["gcode_macro _global_variable"].printing|int == 1 %}
+            M109 T{tool.tool_number} S{printer[macroparameter].print_temp|int}
+        {% else %}
+            M109 T{tool.tool_number} S{printer[tool.extruder].target|int}
+        {% endif %}
     {% endif %}
+    
     ## Run the path in reverse
     {% for pos in path|reverse %}
         G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
     {% endfor %}
-    G4 P250                                                  # Pause and wait for physical stability
-    M400                                                     # Clear cache
-    START_TOOL_PROBE_CRASH_DETECTION T={tool.tool_number}    # Start crash detection
-    M400                                                     # Clear cache
-    G0 Y{tool.params_safe_y} F{fast}                         # Get to safe y
-    RESPOND TYPE=echo MSG='Picked up {tool.name}...'
+    G0 Y{tool.params_safe_y} F{fast}          # Get to safe y
+    M400                                      # Clear cache
+    G4 P200                                   # Pause and wait for physical stability
+    M400                                      # Clear cache
     ## Restore the position
     {% if 'X' in restore_position or 'Y' in restore_position or 'Z' in restore_position %}
         {% if 'X' in restore_position and 'Y' in restore_position and 'Z' in restore_position %}
@@ -151,12 +156,8 @@ pickup_gcode:
                 {% endif %}
             {% endif %}
             {% if 'Z' in restore_position %}
-                {% if wx > 0 and wy > tool.params_safe_y and restore_position.Z > 0.3 %}
-                    {% set macroparameter = "gcode_macro T" ~ tool.tool_number|string %}
-                    {% if printer[macroparameter].material|int == 2 %}
-                        RESPOND TYPE=echo MSG='Clean PETG Nozzle...'
-                        _CLEAN_MID_PRINT
-                    {% endif %}
+                {% set macroparameter = "gcode_macro T" ~ tool.tool_number|string %}
+                {% if wx > 0 and wy > tool.params_safe_y and restore_position.Z > 0.3 and printer[macroparameter].material|int != 2 %}
                     G0 X{wx - 0.4} Y{wy - 0.4} Z{restore_position.Z} F{fast}
                 {% else %}
                     G0 Z{restore_position.Z} F{fast}
@@ -165,17 +166,6 @@ pickup_gcode:
         {% endif %}
     {% endif %}
 
-#--------------------------------------------------------------------
-[tool_probe_endstop]
-crash_gcode:
-    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
-        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.'
-        BASE_PAUSE
-    {% else %}
-        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}'
-    {% endif %}
-    TURN_OFF_HEATERS
-    
 ####################################################################################
 #                        Marcos overwrite
 ####################################################################################
@@ -234,7 +224,7 @@ gcode:
 description: check calibration probe and initialse toolhead before QGL
 rename_existing: _QUAD_GANTRY_LEVEL
 gcode:
-    ## This macro done as such to overcomes some Klipper macro variable quirk
+    ## This macro done as such to overcomes some Klipper macro variable quirk.
     _CPI_CHECK
     _QGL
 
@@ -246,7 +236,7 @@ gcode:
 gcode:
     TOOL_CALIBRATE_QUERY_PROBE
     M400
-
+    
 #--------------------------------------------------------------------
 [gcode_macro _QGL]
 gcode:
@@ -255,20 +245,6 @@ gcode:
         _QUAD_GANTRY_LEVEL
     {% else %}
         RESPOND TYPE=error MSG='CALIBRATION PROBE NOT DOCKED!!!'
-    {% endif %}
-
-#--------------------------------------------------------------------
-[gcode_macro _ADJUST_Z_HOME_FOR_TOOL_OFFSET]
-description: Correct the physical Z endstop offset, relative to TO.
-gcode:
-    G90 ; absolute mode
-    G0 Z10 F1000
-    {% set tool = printer.toolchanger.tool %}
-    {% if tool %}
-        {% set tool_z_offset = printer[tool].gcode_z_offset %}
-        {% set probe_z_offset = printer.tool_probe_endstop.active_tool_probe_z_offset %}
-        SET_KINEMATIC_POSITION Z={10.0 + tool_z_offset|float + probe_z_offset|float}
-        G0 Z10 F1000
     {% endif %}
 
 #--------------------------------------------------------------------
@@ -307,6 +283,20 @@ gcode:
         INITIALIZE_TOOLCHANGER T={printer.tool_probe_endstop.active_tool_number}
     {% endif %}
 
+#--------------------------------------------------------------------
+[gcode_macro _ADJUST_Z_HOME_FOR_TOOL_OFFSET]
+description: Correct the physical Z endstop offset, relative to TO.
+gcode:
+    G90 ; absolute mode
+    G0 Z10 F1000
+    {% set tool = printer.toolchanger.tool %}
+    {% if tool %}
+        {% set tool_z_offset = printer[tool].gcode_z_offset %}
+        {% set probe_z_offset = printer.tool_probe_endstop.active_tool_probe_z_offset %}
+        SET_KINEMATIC_POSITION Z={10.0 + tool_z_offset|float + probe_z_offset|float}
+        G0 Z10 F1000
+    {% endif %}
+    
 ####################################################################################
 #	                         Working Functions
 ####################################################################################
@@ -314,9 +304,35 @@ gcode:
 [gcode_macro A_CONFIG_TOGGLE]
 description: Toggle between the config with-dock and without-dock
 gcode:
+    {% set center_x = printer["gcode_macro _home"].xh|float %}
+    {% set center_y = printer["gcode_macro _home"].yh|float %}
+    {% if "xyz" in printer.toolhead.homed_axes %}
+        G1 X{center_x} Y{center_y} Z150 F9000
+    {% endif %}
     M400
     SAVE_CONFIG_MODE
     M400
     TOGGLE_CONFIG_MODE
     M400
     FIRMWARE_RESTART
+
+#--------------------------------------------------------------------
+[tool_probe_endstop]
+crash_gcode:
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.'
+        {% if printer['pause_resume'].is_paused|int == 0 %}
+            ## set hotend temp variable for reference in resume macro
+            SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer[printer['toolhead'].extruder].target}
+            SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
+            BASE_PAUSE                                                                           ; pause print
+            SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
+            {% for tool_nr in printer.toolchanger.tool_numbers %}
+                M104 T{tool_nr} S0
+            {% endfor %}
+            SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
+        {% endif %}
+    {% else %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}'
+        TURN_OFF_HEATERS
+    {% endif %}
