--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T1.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/T1.cfg
@@ -39,13 +39,13 @@ microsteps: 16
 ##	New value = old value x (actual extrusion length / target length)
 ##  	22.6789511 is a value that we recommend
 gear_ratio: 50:10
-rotation_distance: 21.6261675
+rotation_distance: 20.7611208
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: EBBCan1: PB13
 
 min_extrude_temp: 170                 # Minimum extrusion temperature
-pressure_advance: 0.03                # Propulsion pressure - try to keep pressure below 1.0
+pressure_advance: 0.035               # Propulsion pressure - try to keep pressure below 1.0
 pressure_advance_smooth_time: 0.040   # Smooth advance time - default value is 0.040
 min_temp: 0                           #<-- important
 max_temp: 300                         #<-- important
@@ -127,8 +127,17 @@ activate_gcode:
 [gcode_macro T1]
 variable_color: ""
 variable_material: 0
+variable_print_temp: 0
 gcode:
     SELECT_TOOL T=1
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        M400
+        START_TOOL_PROBE_CRASH_DETECTION T=1      # Start crash detection
+        {% if material|int == 2 %}
+            RESPOND TYPE=echo MSG='Clean PETG Nozzle...'
+            _CLEAN_MID_PRINT
+        {% endif %}
+    {% endif %}
 
 #####################################################################
 #                        Toolhead parameters
