--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-testing.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/macro-testing.cfg
@@ -41,21 +41,22 @@ gcode:
 gcode:
     {% if (printer.toolhead.position[2]|float + 0.2) < printer['toolchanger'].params_max_z|float %}
         G91
-        G0 Z0.2 F1000
+        G0 Z0.2 F9000
         G90
+        G0 Z{printer.toolhead.position[2]|round(1, 'common')} F9000
     {% else %}
         G90
         G0 Z1.0 F9000
     {% endif %}
     M400
-    RESPOND TYPE=echo MSG='Height: {printer.toolhead.position[2]|round(2, 'common')}mm ...'
     
 #--------------------------------------------------------------------
-[gcode_macro A_TC_RELIABILITY_TEST]
-variable_tcno: 50
+[gcode_macro _A_TC_RELIABILITY_TEST]
 # variable_tcno: 1250      # 1 tool-change at every layer until z=250mm
-variable_noth: 3         # 3 tool-heads
+variable_tcno: 20
 gcode:
+    {% set tools = printer.toolchanger.tool_numbers %}
+    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=printing VALUE=1
     ## Set up gantry ------------------------------------------------
     {% if "xyz" not in printer.toolhead.homed_axes %}
         G28
@@ -66,36 +67,26 @@ gcode:
     {% endif %}
     G90
     G0 Z0.2 F9000
-    
+
     ## Testing ------------------------------------------------------
-    {% set tcnr = (tcno*noth*1.1)|int %}                                       # set the number of tool-changes to be run
-    RESPOND TYPE=echo MSG='Test {tcnr} tool-changes...'
-    
-    {% for n in range(tcnr) %}
-        {% set nr = printer.toolchanger.tool_numbers|random %}                 # Set a random tool to pickup.
-        
-        _A_TC_RELIABILITY_TEST_LAYER_CHANGE
-        RESPOND TYPE=echo MSG='Changer no.: {n} ...'
-
-        {% if nr == printer['toolchanger'].tool_number %}                      # If the random tool selected is the active tool,
-            TEST_TOOL_DOCKING                                                  # then just test that dock.
-        {% else %}                                                             # Otherwise,
-            T{ nr }                                                            # pick up the random tool.
-        {% endif %}
+    {% for tool in tools %}
+        {% for n in range(tcno) %}
+            {% set nr = printer.toolchanger.tool_numbers|random %}                 # Set a random tool to pickup.
+            _A_TC_RELIABILITY_TEST_LAYER_CHANGE
+            {% if nr == printer['toolchanger'].tool_number %}                      # If the random tool selected is the active tool,
+                TEST_TOOL_DOCKING                                                  # then just test that dock.
+            {% else %}                                                             # Otherwise,
+                T{ nr }                                                            # pick up the random tool.
+            {% endif %}
+        RESPOND TYPE=echo MSG='Test cycle: {tool+1} | Change no.:{n} ...'
+        {% endfor %}
     {% endfor %}
-
+    
     T0
     G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
     
     ## End note -----------------------------------------------------
     M400
+    SET_GCODE_VARIABLE  MACRO=_global_variable  VARIABLE=printing VALUE=0
     RESPOND TYPE=echo MSG='Reliability test cleared. CONGRATULATION'
-
-# #--------------------------------------------------------------------
-# [gcode_macro TEST]
-# gcode:
-#     {% if printer['gcode_macro _global_variable'].thermo_expand_temp_low != 0 %}
-#         RESPOND TYPE=echo MSG='Testing'
-#     {% endif %}
-    
     
