--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
@@ -16,15 +16,16 @@ description: Global variables that is used through out the configs
 variable_calibration_probe_x: 241.76         # X aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
 variable_calibration_probe_y: 330.28         # Y aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
 variable_calibration_safe_z: 60.00           # Z aproximate safe position of the Nudge probe. KEEP CONSERVATIVE TO AVOID COLLISION
-variable_clean_dock_x: 0                     # X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP. Set to "0" to disable
+variable_clean_dock_x: 175                   # X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP. Set to "0" to disable
+variable_clean_interval: 5                   # The number of layers of PETG to do before scrubing the nozzle. This should be equal to the number of top/bottom layer of the print
 variable_clean_temp: 200                     # Nozzle clean temperature
-variable_clean_threshold: 150.0              # The minimum perimeter of the print, below which the printing material will not be considered
-variable_heatsoak_temp: 45                   # Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below. Set to "0" to disable
-variable_printing: 0                         # Printing indicator
+variable_clean_threshold: 125.0              # The minimum perimeter of the print, below which the printing material will not be considered
+variable_heatsoak_temp: 50                   # Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below. Set to "0" to disable
+variable_printing: 0                         # Printing indicator. "0" = not printing, "1" = is printing
 variable_skew_compensation: 1                # "0" to disable, "1" to enable
 variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
-variable_thermo_expand_temp_high: 50         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
-variable_thermo_expand_temp_low: 35          # Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]. Set to "0" to disable
+variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
+variable_thermo_expand_temp_low: 30          # Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]. Set to "0" to disable
 variable_wipe_x: 0.0                         # Wipe tower x position
 variable_wipe_y: 0.0                         # Wipe tower y position
 gcode:                                       # This is here to appease klipper
@@ -284,7 +285,8 @@ hardware_pwm: False
 ##                          Idle off hot bed
 ####################################################################################
 [idle_timeout]
-timeout: 1800                       # The hot bed is switched off if the idle time exceeds 30 minutes
+# timeout: 1800                       # The hot bed is switched off if the idle time exceeds 30 minutes
+timeout: 3600                       # The hot bed is switched off if the idle time exceeds 60 minutes
 
 ####################################################################################
 ##	                         Firmware Retraction
@@ -430,7 +432,7 @@ gcode:
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = -0.932500
+#*# z_offset = -0.787000
 #*#
 #*# [extruder]
 #*# control = pid
@@ -439,12 +441,12 @@ gcode:
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.112500
-#*# gcode_y_offset = 0.284375
-#*# gcode_z_offset = 0.367500
+#*# gcode_x_offset = 0.190625
+#*# gcode_y_offset = 0.212500
+#*# gcode_z_offset = 0.392500
 #*#
 #*# [tool_probe T1]
-#*# z_offset = -0.777500
+#*# z_offset = 0.000
 #*#
 #*# [extruder1]
 #*# control = pid
@@ -453,12 +455,12 @@ gcode:
 #*# pid_kd = 86.477
 #*#
 #*# [tool T2]
-#*# gcode_x_offset = 0.137500
-#*# gcode_y_offset = 0.578125
-#*# gcode_z_offset = 0.545000
+#*# gcode_x_offset = 0.159375
+#*# gcode_y_offset = 0.587500
+#*# gcode_z_offset = 0.520000
 #*#
 #*# [tool_probe T2]
-#*# z_offset = -1.277500
+#*# z_offset = 0.000
 #*#
 #*# [extruder2]
 #*# control = pid
