--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
@@ -34,6 +34,7 @@ gcode:
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
     {% set names = printer.toolchanger.tool_names %}
+    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     
     {% if printer['quad_gantry_level'].applied == True and "xyz" in printer.toolhead.homed_axes and printer.tools_calibrate.calibration_probe_inactive == False %}
         SELECT_TOOL T={tools[0]}
@@ -60,9 +61,8 @@ gcode:
             {% endfor %}
         {% endif %}
         # Finish up
-        TURN_OFF_HEATERS
         SELECT_TOOL T={tools[0]}
-        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
+        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} Z{safe_z} F9000
     {% else %}
         {% if printer['quad_gantry_level'].applied == False %}
             RESPOND TYPE=error MSG='Gantry is not LEVELED...'
@@ -79,33 +79,13 @@ gcode:
 [gcode_macro _CALIBRATE_NPO]
 description: Nozzle probe offset calibration
 gcode:
-    {% set tools = printer.toolchanger.tool_numbers %}
-    {% set names = printer.toolchanger.tool_names %}
+    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     {% if printer['quad_gantry_level'].applied == True and "xyz" in printer.toolhead.homed_axes and printer.tools_calibrate.calibration_probe_inactive == False %}
-        SELECT_TOOL T={tools[0]}
-        G28
-        _CALIBRATE_MOVE_OVER_PROBE
         STOP_TOOL_PROBE_CRASH_DETECTION
+        _CALIBRATE_MOVE_OVER_PROBE
         TOOL_LOCATE_SENSOR
-        {% if params.TOOL != null%}
-            RESPOND TYPE=echo MSG='Calibrate T{params.TOOL}...'
-            SELECT_TOOL T={params.TOOL}  RESTORE_AXIS=Z
-            _CALIBRATE_MOVE_OVER_PROBE
-            STOP_TOOL_PROBE_CRASH_DETECTION
-            TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{params.TOOL}"
-        {% else %}
-            RESPOND TYPE=echo MSG='Calibrate all tools...'
-            {% for tool in tools[1:] %}
-                SELECT_TOOL T={tool}  RESTORE_AXIS=Z
-                STOP_TOOL_PROBE_CRASH_DETECTION
-                _CALIBRATE_MOVE_OVER_PROBE
-                TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{tool}"
-            {% endfor %}
-        {% endif %}
-        # Finish up
-        TURN_OFF_HEATERS
-        SELECT_TOOL T={tools[0]}
-        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
+        TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{printer.toolchanger.tool_number}"
+        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} Z{safe_z} F9000
     {% else %}
         {% if printer['quad_gantry_level'].applied == False %}
             RESPOND TYPE=error MSG='Gantry is not LEVELED...'
@@ -122,8 +102,8 @@ gcode:
 #                        Working
 #####################################################################
 #--------------------------------------------------------------------
-[gcode_macro CALIBRATE_OFFSETS]
-description: Tool offsets calibration
+[gcode_macro CALIBRATE_RGO]
+description: Relative G-code Offsets, in reference to T0
 gcode:
     ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
@@ -135,16 +115,10 @@ gcode:
     {% endif %}
 
 #--------------------------------------------------------------------
-[gcode_macro CALIBRATE_NPO]
-description: Nozzle probe offset calibration
+[gcode_macro CALIBRATE_AZO]
+description: Absolute Z Offset, in reference to the bed
 gcode:
-    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
     _CPI_CHECK
-    {% if params.TOOL != null%}
-        _CALIBRATE_NPO TOOL={params.TOOL}
-    {% else %}
-        _CALIBRATE_NPO
-    {% endif %}
-    
+    _CALIBRATE_NPO
