Update Calibration Routine

--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
@@ -125,7 +125,7 @@ run_current: 0.8
 #   |                 |
 #   |                 |
 #   |                 |
-#  z0---   display ---z3
+#  z0---- display ----z3
 ####################################################################################
 ##                  Z0-axis
 ####################################################################################
