--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
@@ -42,12 +42,14 @@ gcode:
         _CALIBRATE_MOVE_OVER_PROBE
         STOP_TOOL_PROBE_CRASH_DETECTION
         TOOL_LOCATE_SENSOR
+        TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T0"
         {% if params.TOOL != null%}
             RESPOND TYPE=echo MSG='Calibrate T{params.TOOL}...'
             SELECT_TOOL T={params.TOOL}  RESTORE_AXIS=Z
             STOP_TOOL_PROBE_CRASH_DETECTION
             _CALIBRATE_MOVE_OVER_PROBE    
             TOOL_CALIBRATE_TOOL_OFFSET
+            TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{params.TOOL}"
         {% else %}
             RESPOND TYPE=echo MSG='Calibrate all tools...'
             {% for tool in tools[1:] %}
@@ -58,11 +60,12 @@ gcode:
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_x_offset VALUE="{% raw %}{x:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_y_offset VALUE="{% raw %}{y:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_z_offset VALUE="{% raw %}{z:0.6f}{% endraw %}"
+                TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{tool}"
             {% endfor %}
         {% endif %}
         # Finish up
         SELECT_TOOL T={tools[0]}
-        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} Z{safe_z} F9000
+        G1 X{printer['gcode_macro _home'].xh} Y{printer.toolhead.axis_maximum.y - 10} Z{safe_z} F9000
     {% else %}
         {% if printer['quad_gantry_level'].applied == False %}
             RESPOND TYPE=error MSG='Gantry is not LEVELED...'
@@ -85,7 +88,7 @@ gcode:
         _CALIBRATE_MOVE_OVER_PROBE
         TOOL_LOCATE_SENSOR
         TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{printer.toolchanger.tool_number}"
-        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} Z{safe_z} F9000
+        G1 X{printer['gcode_macro _home'].xh} Y{printer.toolhead.axis_maximum.y - 10} Z{safe_z} F9000
     {% else %}
         {% if printer['quad_gantry_level'].applied == False %}
             RESPOND TYPE=error MSG='Gantry is not LEVELED...'
@@ -102,7 +105,7 @@ gcode:
 #                        Working
 #####################################################################
 #--------------------------------------------------------------------
-[gcode_macro CALIBRATE_RGO]
+[gcode_macro CALIBRATE_OFFSETS]
 description: Relative G-code Offsets, in reference to T0
 gcode:
     ## This macro done as such to overcomes some Klipper macro variable quirk
@@ -115,7 +118,7 @@ gcode:
     {% endif %}
 
 #--------------------------------------------------------------------
-[gcode_macro CALIBRATE_AZO]
+[gcode_macro CALIBRATE_NPO]
 description: Absolute Z Offset, in reference to the bed
 gcode:
     ## This macro done as such to overcomes some Klipper macro variable quirk
