--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/toolchanger-calibrate.cfg
@@ -34,7 +34,6 @@ gcode:
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
     {% set names = printer.toolchanger.tool_names %}
-    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     
     {% if printer['quad_gantry_level'].applied == True and "xyz" in printer.toolhead.homed_axes and printer.tools_calibrate.calibration_probe_inactive == False %}
         SELECT_TOOL T={tools[0]}
@@ -42,14 +41,12 @@ gcode:
         _CALIBRATE_MOVE_OVER_PROBE
         STOP_TOOL_PROBE_CRASH_DETECTION
         TOOL_LOCATE_SENSOR
-        TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T0"
         {% if params.TOOL != null%}
             RESPOND TYPE=echo MSG='Calibrate T{params.TOOL}...'
             SELECT_TOOL T={params.TOOL}  RESTORE_AXIS=Z
             STOP_TOOL_PROBE_CRASH_DETECTION
             _CALIBRATE_MOVE_OVER_PROBE    
             TOOL_CALIBRATE_TOOL_OFFSET
-            TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{params.TOOL}"
         {% else %}
             RESPOND TYPE=echo MSG='Calibrate all tools...'
             {% for tool in tools[1:] %}
@@ -60,10 +57,10 @@ gcode:
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_x_offset VALUE="{% raw %}{x:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_y_offset VALUE="{% raw %}{y:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_z_offset VALUE="{% raw %}{z:0.6f}{% endraw %}"
-                TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{tool}"
             {% endfor %}
         {% endif %}
         # Finish up
+        TURN_OFF_HEATERS
         SELECT_TOOL T={tools[0]}
         G1 X{printer['gcode_macro _home'].xh} Y{printer.toolhead.axis_maximum.y - 10} Z{safe_z} F9000
     {% else %}
@@ -82,10 +79,13 @@ gcode:
 [gcode_macro _CALIBRATE_NPO]
 description: Nozzle probe offset calibration
 gcode:
-    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
+    {% set tools = printer.toolchanger.tool_numbers %}
+    {% set names = printer.toolchanger.tool_names %}
     {% if printer['quad_gantry_level'].applied == True and "xyz" in printer.toolhead.homed_axes and printer.tools_calibrate.calibration_probe_inactive == False %}
-        STOP_TOOL_PROBE_CRASH_DETECTION
+        SELECT_TOOL T={tools[0]}
+        G28
         _CALIBRATE_MOVE_OVER_PROBE
+        STOP_TOOL_PROBE_CRASH_DETECTION
         TOOL_LOCATE_SENSOR
         TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{printer.toolchanger.tool_number}"
         G1 X{printer['gcode_macro _home'].xh} Y{printer.toolhead.axis_maximum.y - 10} Z{safe_z} F9000
@@ -121,7 +121,13 @@ gcode:
 [gcode_macro CALIBRATE_NPO]
 description: Absolute Z Offset, in reference to the bed
 gcode:
+    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
     _CPI_CHECK
-    _CALIBRATE_NPO
+    {% if params.TOOL != null%}
+        _CALIBRATE_NPO TOOL={params.TOOL}
+    {% else %}
+        _CALIBRATE_NPO
+    {% endif %}
+    
