Update documentation and sample config

--- a/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Bleeding/Klipper_Config/printer.cfg
@@ -37,6 +37,7 @@ variable_calibration_probe_y: 329.825000     # Y aproximate position of the Nudg
 variable_calibration_safe_z: 60.00           # Z aproximate safe position of the Nudge probe. KEEP CONSERVATIVE TO AVOID COLLISION
 variable_calibration_min_z: 35.00            # Z aproximate probe position of the Nudge probe.
 variable_calibration_abs_z_seperately: 0     # "0" = False / "1" = True. For, the Nudge probe this should be '1'
+variable_final_lift_z: 3                     # This must be the same as "final_lift_z" in [tools_calibrate] in misschanger_settings.cfg
 ## Cleaning dock
 variable_clean_dock_x: 175                   # X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP. Set to "0" to disable
 variable_clean_temp: 200                     # Nozzle clean temperature
@@ -439,7 +440,7 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = 0.597500
+#*# z_offset = -0.563750
 #*#
 #*# [extruder]
 #*# control = pid
@@ -448,12 +449,12 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.240625
-#*# gcode_y_offset = 0.175000
-#*# gcode_z_offset = 0.395000
+#*# gcode_x_offset = 0.225000
+#*# gcode_y_offset = 0.243750
+#*# gcode_z_offset = 0.485000
 #*#
 #*# [tool_probe T1]
-#*# z_offset = 0.632500
+#*# z_offset = -0.510000
 #*#
 #*# [extruder1]
 #*# control = pid
@@ -462,12 +463,12 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 86.477
 #*#
 #*# [tool T2]
-#*# gcode_x_offset = 0.281250
-#*# gcode_y_offset = 0.965625
-#*# gcode_z_offset = 0.220000
+#*# gcode_x_offset = 0.287500
+#*# gcode_y_offset = 0.934375
+#*# gcode_z_offset = 0.307500
 #*#
 #*# [tool_probe T2]
-#*# z_offset = 0.106250
+#*# z_offset = -1.060000
 #*#
 #*# [extruder2]
 #*# control = pid
@@ -476,15 +477,18 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 103.505
 #*#
 #*# [tool T3]
-#*# gcode_x_offset = 0.281250
-#*# gcode_y_offset = 0.871875
-#*# gcode_z_offset = 0.137500
+#*# gcode_x_offset = 0.331250
+#*# gcode_y_offset = 0.671875
+#*# gcode_z_offset = 0.220000
 #*#
 #*# [tool_probe T3]
-#*# z_offset = 0.047500
+#*# z_offset = -1.115000
 #*#
 #*# [extruder3]
 #*# control = pid
 #*# pid_kp = 34.630
 #*# pid_ki = 3.785
 #*# pid_kd = 79.217
+#*#
+#*# [tool_probe_endstop]
+#*# z_offset = -0.605
