--- a/STL_Config_Instructions/v1.2 - Alpha/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Alpha/Klipper_Config/printer.cfg
@@ -17,7 +17,7 @@
 ##	                         Others
 ####################################################################################
 [config_switch]
-
+[pause_resume]
 # ...
 # ...
 # ...
@@ -48,7 +48,6 @@ variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expa
 variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
 variable_thermo_expand_temp_low: 0           # Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]. Set to "0" to disable
 gcode:                                       # This is here to appease klipper
-
 # ...
 # ...
 # ...
@@ -59,7 +58,6 @@ gcode:                                       # This is here to appease klipper
 [temperature_sensor Chamber]
 sensor_type: Generic 3950
 sensor_pin: PF4
-
 # ...
 # ...
 # ...
@@ -86,7 +84,6 @@ cycle_time: 0.010
 hardware_pwm: False
 kick_start_time: 0.100
 off_below: 0.05
-
 # ...
 # ...
 # ...
